objects/Mileage__c.object
<CustomObject>
    <description>An object that holds mileage information for a trip.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person that was seen on this trip</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mileage</relationshipLabel>
        <relationshipName>Mileage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of mileage report.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <description>Miles driven</description>
        <label>Miles</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mileage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Mileage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mileage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>